; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ahci/extr_ahci_pci.c_ahci_pci_suspend.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ahci/extr_ahci_pci.c_ahci_pci_suspend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ahci_controller = type { i32 }

@AHCI_GHC = common dso_local global i32 0, align 4
@AHCI_GHC_IE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @ahci_pci_suspend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ahci_pci_suspend(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ahci_controller*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.ahci_controller* @device_get_softc(i32 %4)
  store %struct.ahci_controller* %5, %struct.ahci_controller** %3, align 8
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @bus_generic_suspend(i32 %6)
  %8 = load %struct.ahci_controller*, %struct.ahci_controller** %3, align 8
  %9 = getelementptr inbounds %struct.ahci_controller, %struct.ahci_controller* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @AHCI_GHC, align 4
  %12 = load %struct.ahci_controller*, %struct.ahci_controller** %3, align 8
  %13 = getelementptr inbounds %struct.ahci_controller, %struct.ahci_controller* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @AHCI_GHC, align 4
  %16 = call i32 @ATA_INL(i32 %14, i32 %15)
  %17 = load i32, i32* @AHCI_GHC_IE, align 4
  %18 = xor i32 %17, -1
  %19 = and i32 %16, %18
  %20 = call i32 @ATA_OUTL(i32 %10, i32 %11, i32 %19)
  ret i32 0
}

declare dso_local %struct.ahci_controller* @device_get_softc(i32) #1

declare dso_local i32 @bus_generic_suspend(i32) #1

declare dso_local i32 @ATA_OUTL(i32, i32, i32) #1

declare dso_local i32 @ATA_INL(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
